# FeedFilesControl

./: .gitignore  manage.py  pyproject.toml  pytest.ini
FeedFilesControl/: asgi.py  urls.py  wsgi.py
FeedFilesControl/settings/: base.py
manufacturers_feed/: apps.py  models.py  urls.py  views.py
manufacturers_feed/migrations/: 0001_initial.py
manufacturers_feed/templates/manufacturers_feed/: index.html
tests/: conftest.py  func_test.py
tests/FeedFilesControl/: conftest.py  tests.py
tests/manufacturers_feed/: configure.py  test_models.py
