[tool.poetry]
name = "feedfilescontrol"
version = "0.1.0"
description = "django service to save latest feeds file by exhibitors"
authors = ["6ejibiu <akimovpnz@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-django = "^3.8.0"
mixer = "^6.1.3"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
